--- a/inventory.ini
+++ b/inventory.ini
@@ -1,2 +1,9 @@
-[my_vagrant_vms]
-vm_1 ansible_host=127.0.0.1 ansible_port=2222 ansible_user=vagrant ansible_ssh_private_key_file=.vagrant/machines/default/virtualbox/private_key ansible_python_interpreter=/usr/bin/python3
+[my_vms]
+vm_1 ansible_host=127.0.0.1
+
+[my_vms:vars]
+ansible_connection=ssh
+ansible_port=2222
+ansible_user=vagrant
+ansible_python_interpreter=auto_silent
+ansible_ssh_private_key_file=.vagrant/machines/default/virtualbox/private_key
