--- a/inventory.ini
+++ b/inventory.ini
@@ -1,9 +1,12 @@
 [my_vms]
-vm_1 ansible_host=127.0.0.1
+# Point to the specific key for each node
+node-1 ansible_host=192.168.56.11 ansible_ssh_private_key_file=.vagrant/machines/node-1/virtualbox/private_key
+node-2 ansible_host=192.168.56.12 ansible_ssh_private_key_file=.vagrant/machines/node-2/virtualbox/private_key
+node-3 ansible_host=192.168.56.13 ansible_ssh_private_key_file=.vagrant/machines/node-3/virtualbox/private_key
 
 [my_vms:vars]
 ansible_connection=ssh
-ansible_port=2222
 ansible_user=vagrant
-ansible_python_interpreter=auto_silent
-ansible_ssh_private_key_file=.vagrant/machines/default/virtualbox/private_key
+ansible_port=22
+ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+ansible_python_interpreter=/usr/bin/python3
