--- a/inventory.ini
+++ b/inventory.ini
@@ -9,4 +9,4 @@ ansible_connection=ssh
 ansible_user=vagrant
 ansible_port=22
 ansible_ssh_common_args='-o StrictHostKeyChecking=no'
-ansible_python_interpreter=/usr/bin/python3
+ansible_python_interpreter='/usr/bin/python3'
